--- a/_sass/jekyll-theme-prologue.scss
+++ b/_sass/jekyll-theme-prologue.scss
@@ -3,6 +3,7 @@
 @import 'libs/mixins';
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,600");
+@import url("https://fonts.googleapis.com/css?family=Lato:300,300italic,400,600");
 
 /*
 	Prologue by HTML5 UP
@@ -281,6 +282,11 @@
 			padding-left: 0.25em;
 			margin-left: 1.25em;
 		}
+
+		p {
+			font-family: "Lato";
+		}
+
 	}
 
 /* Image */
