no wrap for name

--- a/_includes/logo.html
+++ b/_includes/logo.html
@@ -1,7 +1,7 @@
 <!-- Logo -->
 <div id="logo" align='left'>
   <a href="{{- '/' | absolute_url -}}" id="home-link">
-    <h1 id="title" style="font-family:Laro">Sitong An &nbsp;-&nbsp; <span style="font-family:Microsoft YaHei,STHeiti Light">安思同</span></h1>
+    <h1 id="title" style="font-family:Laro"><span class="nowrap">Sitong An</span> &nbsp;-&nbsp; <span class ="nowrap" style="font-family:Microsoft YaHei,STHeiti Light">安思同</span></h1>
     <p>Machine Learning for Particle Physics</p>
   </a>
 </div>
