--- a/_includes/social_icons.html
+++ b/_includes/social_icons.html
@@ -1,10 +1,10 @@
 <!-- Social Icons -->
 <ul class="icons">
-  {%- if site.twitter_url -%}
-  <li><a href="{{- site.twitter_url -}}" class="icon-b fa-twitter"><span class="label">Twitter</span></a></li>
-  {%- endif -%}
   {%- if site.facebook_url -%}
   <li><a href="{{- site.facebook_url -}}" class="icon-b fa-facebook-f"><span class="label">Facebook</span></a></li>
+  {%- endif -%}
+  {%- if site.twitter_url -%}
+  <li><a href="{{- site.twitter_url -}}" class="icon-b fa-twitter"><span class="label">Twitter</span></a></li>
   {%- endif -%}
   {%- if site.googleplus_url -%}
   <li><a href="{{- site.googleplus_url -}}" class="icon-b fa-google-plus-g"><span class="label">Google Plus</span></a></li>
@@ -14,6 +14,9 @@
   {%- endif -%}
   {%- if site.linkedin_url -%}
   <li><a href="{{- site.linkedin_url -}}" class="icon-b fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+  {%- endif -%}
+  {%- if site.skype_url -%}
+  <li><a href="{{- site.skype_url -}}" class="icon-b fa-skype"><span class="label">Skype</span></a></li>
   {%- endif -%}
   {%- if site.github_url -%}
   <li><a href="{{- site.github_url -}}" class="icon-b fa-github"><span class="label">GitHub</span></a></li>
