--- a/_sass/jekyll-theme-prologue.scss
+++ b/_sass/jekyll-theme-prologue.scss
@@ -902,21 +902,16 @@
 
 /* Normal */
 
+	#headerToggle {
+		display: none;
+	}
+
 	@include breakpoint(normal) {
 
-		/* Main */
-
-			#main {
-				> section, article {
-					padding: 3em 0;
-				}
-
-				section {
-					&.cover {
-						padding: 5em 0;
-					}
-				}
+			html, body {
+				overflow-x: hidden;
 			}
+
 
 		/* Header */
 			#nav {
@@ -926,13 +921,123 @@
 					}
 				}
 			}
+
+			#header {
+				@include vendor('backface-visibility', 'hidden');
+				@include vendor('transform', 'translateX(#{_size(header) * -1})');
+				@include vendor('transition', ('transform #{_duration(header)} ease'));
+				-webkit-overflow-scrolling: touch;
+				display: block;
+				height: 100%;
+				left: 0;
+				overflow-y: auto;
+				position: fixed;
+				top: 0;
+				width: _size(header);
+				z-index: _misc(z-index-base) + 2;
+				width: _size(header);
+				background: #222729 url('images/overlay.png');
+				box-shadow: inset -0.25em 0 0.25em 0 rgba(0, 0, 0, 0.125);
+				.top {
+					position: relative;
+				}
+
+				.bottom {
+					border-top: solid 1px rgba(255, 255, 255, 0.05);
+					box-shadow: 0 -1px 0 0 rgba(0, 0, 0, 0.15);
+					padding-top: 2em;
+					margin-top: 2em;
+					position: relative;
+				}
+			}
+			#headerToggle {
+				@include vendor('backface-visibility', 'hidden');
+				@include vendor('transition', 'transform #{_duration(header)} ease');
+				display: block;
+				height: 2.25em;
+				left: 0;
+				position: fixed;
+				top: 0;
+				width: 3.25em;
+				z-index: _misc(z-index-base) + 1;
+
+				.toggle {
+					position: absolute;
+					left: 0;
+					top: 0;
+					width: 100%;
+					height: 100%;
+					outline: 0;
+					border: 0;
+
+					&::before {
+						font-family: "Font Awesome 5 Free";
+						text-decoration: none;
+						font-style: normal;
+						font-weight: 900;
+						-webkit-font-smoothing: antialiased;
+						-moz-osx-font-smoothing: grayscale;
+						content: '\f0c9';
+						color: #fff;
+						font-size: 18px;
+						line-height: 2.25em;
+						background: rgba(128, 136, 144, 0.5);
+						border-radius: 0.35em;
+						text-align: center;
+						position: absolute;
+						left: 0.5em;
+						top: 0.5em;
+						display: block;
+						width: 3.25em;
+						height: 2.25em;
+						line-height: 2.25em;
+					}
+				}
+			}
+			body {
+				&.header-visible {
+					#main {
+						@include vendor('transform', 'translateX(#{_size(header)})');
+					}
+
+					#headerToggle {
+						@include vendor('transform', 'translateX(#{_size(header)})');
+					}
+
+					#header {
+						@include vendor('transform', 'translateX(0)');
+					}
+				}
+			}
+
+			/* Main */
+
+				#main {
+					@include vendor('backface-visibility', 'hidden');
+					@include vendor('transition', 'transform #{_duration(header)} ease');
+					margin-left: 0;
+					> section, article {
+						padding: 3em 0;
+					}
+
+					section {
+						&.cover {
+							padding: 5em 0;
+						}
+					}
+				}
 	}
+
 
 /* Narrow */
 
 	@include breakpoint(narrow) {
 
 		/* Basic */
+
+			html, body {
+				overflow-x: hidden;
+			}
 
 			body, input, textarea, select {
 				font-size: 16pt;
@@ -963,7 +1068,32 @@
 		/* Header */
 
 			#header {
-				width: 20%;
+				@include vendor('backface-visibility', 'hidden');
+				@include vendor('transform', 'translateX(#{_size(header) * -1})');
+				@include vendor('transition', ('transform #{_duration(header)} ease'));
+				-webkit-overflow-scrolling: touch;
+				display: block;
+				height: 100%;
+				left: 0;
+				overflow-y: auto;
+				position: fixed;
+				top: 0;
+				width: _size(header);
+				z-index: _misc(z-index-base) + 2;
+				width: _size(header);
+				background: #222729 url('images/overlay.png');
+				box-shadow: inset -0.25em 0 0.25em 0 rgba(0, 0, 0, 0.125);
+				.top {
+					position: relative;
+				}
+
+				.bottom {
+					border-top: solid 1px rgba(255, 255, 255, 0.05);
+					box-shadow: 0 -1px 0 0 rgba(0, 0, 0, 0.15);
+					padding-top: 2em;
+					margin-top: 2em;
+					position: relative;
+				}
 			}
 
 			#logo {
@@ -996,25 +1126,98 @@
 				}
 			}
 
+
+			#headerToggle {
+				@include vendor('backface-visibility', 'hidden');
+				@include vendor('transition', 'transform #{_duration(header)} ease');
+				display: block;
+				height: 2.25em;
+				left: 0;
+				position: fixed;
+				top: 0;
+				width: 3.25em;
+				z-index: _misc(z-index-base) + 1;
+
+				.toggle {
+					position: absolute;
+					left: 0;
+					top: 0;
+					width: 100%;
+					height: 100%;
+					outline: 0;
+					border: 0;
+
+					&::before {
+						font-family: "Font Awesome 5 Free";
+						text-decoration: none;
+						font-style: normal;
+						font-weight: 900;
+						-webkit-font-smoothing: antialiased;
+						-moz-osx-font-smoothing: grayscale;
+						content: '\f0c9';
+						color: #fff;
+						font-size: 18px;
+						line-height: 2.25em;
+						background: rgba(128, 136, 144, 0.5);
+						border-radius: 0.35em;
+						text-align: center;
+						position: absolute;
+						left: 0.5em;
+						top: 0.5em;
+						display: block;
+						width: 3.25em;
+						height: 2.25em;
+						line-height: 2.25em;
+					}
+				}
+			}
+
+			body {
+				&.header-visible {
+					#main {
+						@include vendor('transform', 'translateX(#{_size(header)})');
+					}
+
+					#headerToggle {
+						@include vendor('transform', 'translateX(#{_size(header)})');
+					}
+
+					#header {
+						@include vendor('transform', 'translateX(0)');
+					}
+				}
+			}
 		/* Footer */
 
 			#footer {
-				margin-left: 20%;
+				margin-left: 0;
 			}
 
 		/* Main */
 
 			#main {
-				margin-left: 20%;
+				@include vendor('backface-visibility', 'hidden');
+				@include vendor('transition', 'transform #{_duration(header)} ease');
+				/*	margin-left: 20%; */
+				padding-bottom: 1px;
+				margin-left: 0;
+
+				> section, article {
+					padding: 3em 0;
+				}
+
+				section {
+					&.cover {
+						padding: 4em 0;
+					}
+				}
 			}
 
 	}
 
 /* Narrower */
 
-	#headerToggle {
-		display: none;
-	}
+
 
 	@include breakpoint(narrower) {
 
@@ -1028,12 +1231,6 @@
 				font-size: 16pt;
 			}
 
-			header {
-				br {
-					display: none;
-				}
-
-			}
 
 			.container {
 				padding: 0 2em 0 2em;
